--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </div>
           </div>
         </div>
+        <div class="footer">Created by-Alysha Sharma</div>
 </center>
         <script src="main.js"></script>
     </body>
